<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/detail_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill"
        android:paddingBottom="@dimen/alarm_item_height"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding20"
            android:paddingEnd="@dimen/padding20">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/time_picker_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/time_zone_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding20"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/time_zone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_middle"
                        android:textColor="?android:attr/textColorPrimary"
                        android:gravity="start"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/timezone"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/time_zone_name"/>

                    <TextView
                        android:id="@+id/time_zone_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="?attr/colorPrimary"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="end"
                        android:layout_marginStart="@dimen/padding10"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/time_zone"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintTop_toBottomOf="@id/time_zone_view"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/date_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding20"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    app:layout_constraintTop_toBottomOf="@id/divider1">

                    <TextView
                        android:id="@+id/date_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="@dimen/text_middle"
                        android:textColor="?android:attr/textColorPrimary"
                        android:gravity="start"
                        android:ellipsize="end"
                        android:maxLines="1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="?attr/colorPrimary"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="end"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/date_picker"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintTop_toBottomOf="@id/date_view"/>

                <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"
                    android:theme="@style/TimePicker"
                    app:layout_constraintTop_toBottomOf="@id/divider2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/day_recurrence"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:singleSelection="false"
                app:layout_constraintTop_toBottomOf="@id/time_picker_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/firstDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/secondDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/thirdDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fourthDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fifthDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sixthDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/seventhDayOfWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/est_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding20"
                app:layout_constraintTop_toBottomOf="@id/day_recurrence"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/est_time_zone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding20"
                    android:maxLines="1"
                    android:gravity="start"
                    android:ellipsize="end"
                    android:textColor="@color/textColorEnabled"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/est_date_time"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/est_icon"/>

                <TextView
                    android:id="@+id/est_date_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding20"
                    android:textSize="@dimen/text_middle"
                    android:textColor="@color/textColor"
                    android:maxLines="2"
                    android:gravity="start"
                    android:ellipsize="end"
                    app:layout_constraintTop_toBottomOf="@id/est_time_zone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/est_icon"/>

                <ImageView
                    android:id="@+id/est_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/est_date_time"
                    app:layout_constraintEnd_toEndOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintTop_toBottomOf="@id/est_layout"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alarm_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding20"
        android:layout_gravity="center|bottom"
        android:gravity="center"
        android:textColor="?attr/colorPrimary"
        android:visibility="invisible"
        app:iconTint="?attr/colorPrimary"
        app:backgroundTint="@color/background"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        style="?android:progressBarStyle" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>