...
    <!-- Show info -->
    <string name="alarm_empty">Empty</string>
    <string name="clock_empty">Empty</string>
    <string name="no_result">No Result</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="turn_off">Turn Off</string>
    <string name="select_timezone">Time zone</string>
    <string name="select_ringtone">Ringtone</string>
    <string name="select_vibration">Vibration</string>
    <string name="select_snooze">Snooze</string>
    <string name="no_ringtone">No Ringtone</string>
    <string name="no_vibrator">No Vibration</string>
    <string name="no_set">Not set</string>
    <string name="timezone">Time zone</string>
    <string name="label">Label</string>
    <string name="slow">slow</string>
    <string name="fast">fast</string>
    <string name="hour_minutes">%1$d hour %2$d minutes&#160;</string>
    <string name="hours_minutes">%1$d hours %2$d minutes&#160;</string>
    <string name="hour">%1$d hour&#160;</string>
    <string name="hours">%1$d hours&#160;</string>
...
    <string name="unmute">Unmute</string>
    <string name="missed_alarm">Missed Alarm</string>
    <string name="missed_and_last_alarm">Missed Last Alarm</string>
    <string name="select_color">Select Color</string>
    <string name="not_selected">Not selected</string>
    <string name="clear">Clear</string>
    <string name="new_alarm_long">New Alarm</string>
    <string name="new_alarm_short">New Alarm</string>
    <string name="modify_alarm">Modify Alarm</string>
    <string name="expected_time">Alarm will be fired at &#160;%1$s in local time.</string>
    <string name="range_start">Start/Reservation Date</string>
    <string name="range_end">End Date</string>
    <string name="range_not_set">Not set</string>
    <string name="range_text">%1$s (%2$s) ~ %3$s (%4$s)</string>
    <string name="range_until">Until %1$s</string>
    <string name="range_begin">From %1$s</string>
    <string name="one_time_alarm">%1$s (%2$s)</string>
    <string name="last_alarm">Last alarm</string>
    <string name="last_alarm_with_time">%1$s - Last alarm</string>
    <string name="my_ringtone">My ringtone</string>
    <string name="system_ringtone">System ringtone</string>
    <string name="add_new">Add new</string>
    <string name="create">Create</string>
    <string name="remove">Remove</string>
    <string name="world_clock">Time conversion</string>
    <string name="date">Date</string>
    <string name="reset">Revert to default</string>
    <string name="apply">Apply</string>
    <string name="set_to_system_time_zone">Reset</string>
...
