...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding20"
    android:background="?android:attr/selectableItemBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/option_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="@dimen/text_middle"
        android:textColor="?android:attr/textColorPrimary"
        android:ellipsize="end"
        android:fadingEdge="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline"/>
    <TextView
        android:id="@+id/option_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?attr/colorPrimary"
        android:maxLines="1"
        android:ellipsize="end"
...
